--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: pg
+  database: d7114f5pn1jgjf
+  user: lijqdveknbtpeq
+  port: 5432
+  password: FYDAw57TYhCOnVp8rPondB_pSB
+  host: ec2-50-19-219-80.compute-1.amazonaws.com
